fixed all size layouts, now have to add horizontal scroll for browsers/2nd theme

--- a/src/styles.css
+++ b/src/styles.css
@@ -313,6 +313,13 @@ h1 {
 /*  */
 
 @media (min-width: 1024px) {
+  .carouselContainer::-webkit-scrollbar {
+    height: 1rem;
+    background-color: #141414;
+  }
+  .carouselContainer::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 0, 0, 0.164);
+  }
   .main {
     flex-direction: row;
   }
@@ -349,7 +356,8 @@ h1 {
     height: auto;
   }
   .movieInfo {
-    justify-content: center;
+    padding: 2%;
+    justify-content: flex-start;
     align-items: center;
   }
   .btn {
@@ -379,9 +387,6 @@ h1 {
     width: 30rem;
     height: 8.4%;
   }
-  /* html {
-    overflow: hidden;
-  } */
   .searchBar {
     font-size: 1.8rem;
   }
@@ -439,5 +444,65 @@ h1 {
   }
   .watchOrListHeader {
     font-size: 4rem;
+  }
+}
+/*  */
+/*  */
+/* Using this to seperate so i dont get mixed up */
+/*  */
+/*  */
+/*  */
+@media (min-width: 2560px) and (min-resolution: 144dpi) {
+  .mainHeader {
+    flex-direction: column;
+    gap: 2%;
+
+    width: 16rem;
+    height: 9%;
+  }
+  .mainFooter {
+    width: 16rem;
+    height: 98%;
+  }
+  .mainBody {
+    margin-left: 16rem;
+  }
+  .navIcons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .navSVG {
+    height: 4.2rem;
+  }
+  h1 {
+    font-size: 2.4rem;
+  }
+  .searchForm {
+    height: 2.4rem;
+    width: 14rem;
+  }
+  .searchBar {
+    font-size: 1rem;
+  }
+  .movieInfo {
+    justify-content: start;
+    padding: 0%;
+  }
+  .btn {
+    height: 3.4rem;
+    width: 20rem;
+    font-size: 1.4rem;
+  }
+  .watchOrListHeader {
+    font-size: 2.4rem;
+  }
+  .flexCard {
+    min-width: 0px;
+    width: auto;
+    max-height: 30rem;
+  }
+  .carouselContainer {
+    overflow-x: scroll;
   }
 }
